fix grid alignment issue for news cards

--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,7 @@ p {
 }
 
 @media (min-width: 47.938rem) {
-  .grid--main-news {
-    grid-template-columns: 2fr 1fr;
-  }
-
-  .grid--top-news {
+  .grid {
     grid-template-columns: repeat(3, 1fr);
   }
 }
